--- a/src/Libraries/RevitNodesUI/Properties/Resources.resx
+++ b/src/Libraries/RevitNodesUI/Properties/Resources.resx
@@ -392,4 +392,7 @@
   <data name="AllWarningsOfTypeDescription" xml:space="preserve">
     <value>Returns a list of all instances of the selected warning type.</value>
   </data>
+  <data name="NoWarningsInDocument" xml:space="preserve">
+    <value>No warnings in the current document.</value>
+  </data>
 </root>
