--- a/src/Libraries/RevitNodes/Properties/Resources.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.resx
@@ -465,6 +465,12 @@
   <data name="NonIntersectingElements" xml:space="preserve">
     <value>Elements are not intersecting</value>
   </data>
+  <data name="ElementTypeNameNotFound" xml:space="preserve">
+    <value>There is no ElementType of the given name in the current Document</value>
+  </data>
+  <data name="NoStructuralMaterialAssigned" xml:space="preserve">
+    <value>FloorType has no structural material assigned</value>
+  </data>
   <data name="ChildElementsNotSupported" xml:space="preserve">
     <value>Getting child elements is not supported for this type of Element.</value>
   </data>
