--- a/src/DynamoRevitIcons/RevitNodesImages.resx
+++ b/src/DynamoRevitIcons/RevitNodesImages.resx
@@ -10159,7 +10159,8 @@
         bMAF0M4bri3XB8h/Ehhy4GEUhHbu6wrY3AkMol3fgT9+9TF4coago6/8cF+17w8WQjbBMPorlv4z185j
         8GQJEcuoQ1xThkrQpwZNnxBvL2YsFCA5BNYTQroY+oYI3zFpHboY4t8nLFGlNaq0RpXWqNIaVdriiidp
         S0RiDjabCgAAAABJRU5ErkJggg==
-=======
+</value>
+  </data>
   <data name="Revit.Elements.Group.AttachedDetailGroup.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGEAAABhCAYAAADGBs+jAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
