--- a/src/DynamoRevitIcons/RevitNodesImages.resx
+++ b/src/DynamoRevitIcons/RevitNodesImages.resx
@@ -11182,8 +11182,9 @@
         7fsFKRJEolJvThRgYIgQHfKcJ9t63aB0Ou1Lomv25GGlre3dQ3MqYOgF/xqedOtNW7YeH9FeEiyQePYJ
         tqQbGE6CRXhF7jzelRu1WCzKFlTFuY13Xlas49qHAAPD05Ai+eFv3vH8jLC3Kp8p8gXHpwADQz8IEflI
         5/eHubMxeUvGAuv9r2iMFzD0i11k/urNqV/xYBgEJSL+Tv2yC8OgiMKz4gk5mkaAgWHYwDBsYBg2MAwb
-        GIYLzfwDCMnNCYUKruoAAAAASUVORK5CYII=
-=======
+        GIYLzfwDCMnNCYUKruoAAAAASUVORK5CYII=    
+</value>
+  </data>
   <data name="Revit.Elements.Group.GetGroupMembers.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGEAAABhCAYAAADGBs+jAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
